// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`esm-props-usage adjust-lines.any 1`] = `
Object {
  "components": Object {},
  "doc": Object {
    "components": Object {},
    "componentsLookup": Object {},
    "date": 2020-10-21T01:23:26.430Z,
    "dateModified": 2020-10-21T01:23:26.430Z,
    "package": "a7193179ecf0779da0f8745aa25fb16f",
    "title": "Story",
  },
  "packages": Object {
    "a7193179ecf0779da0f8745aa25fb16f": Object {
      "dependencies": Object {
        "@babel/generator": "^7.9.4",
        "@babel/parser": "^7.9.4",
        "@babel/traverse": "^7.9.0",
        "@component-controls/core": "^1.36.6",
        "@hutson/parse-repository-url": "^5.0.0",
        "@mdx-js/loader": "^1.5.5",
        "@mdx-js/react": "^1.6.5",
        "camelcase": "^6.0.0",
        "deepmerge": "^4.2.2",
        "find-cache-dir": "^3.3.1",
        "gray-matter": "^4.0.2",
        "hosted-git-info": "^3.0.4",
        "js-string-escape": "^1.0.1",
        "prettier": "^1.19.1",
        "read-package-json": "^2.1.1",
        "remark-emoji": "^2.1.0",
        "remark-images": "^2.0.0",
        "resolve": "^1.15.1",
        "typescript": "^4.0.5",
      },
      "devDependencies": Object {
        "@babel/types": "^7.9.0",
        "@component-controls/ts-markdown-docs": "^1.21.0",
        "@rollup/plugin-node-resolve": "^7.1.1",
        "@types/find-cache-dir": "^3.2.0",
        "@types/hosted-git-info": "^3.0.0",
        "@types/jest": "^26.0.10",
        "cross-env": "^5.2.1",
        "eslint": "^6.5.1",
        "jest": "^26.4.2",
      },
      "fileHash": "a7193179ecf0779da0f8745aa25fb16f",
      "name": "@component-controls/instrument",
      "peerDependencies": undefined,
      "repository": Object {
        "browse": "https://github.com/ccontrols/component-controls/tree/master/core/instrument/test/fixtures/esm/props-usage/adjust-lines.any",
        "docs": "https://github.com/ccontrols/component-controls/tree/master#readme",
        "issues": "https://github.com/ccontrols/component-controls/issues",
      },
      "version": "1.36.7",
    },
  },
  "stories": Object {
    "myStory": Object {
      "arguments": Array [
        Object {
          "loc": Object {
            "end": Object {
              "column": 5,
              "line": 0,
            },
            "start": Object {
              "column": 0,
              "line": 0,
            },
          },
          "name": "props",
          "usage": Array [
            Object {
              "loc": Object {
                "end": Object {
                  "column": 25,
                  "line": 0,
                },
                "start": Object {
                  "column": 20,
                  "line": 0,
                },
              },
              "shorthand": undefined,
            },
          ],
          "value": "props",
        },
      ],
      "id": "myStory",
      "loc": Object {
        "end": Object {
          "column": 52,
          "line": 5,
        },
        "start": Object {
          "column": 23,
          "line": 5,
        },
      },
      "name": "myStory",
      "source": "props => <Story {...props} />",
    },
  },
  "transformed": "export default {
  title: 'Story',
}

export const myStory = props => (
  <Story
   {...props}
  />
);
",
}
`;

exports[`esm-props-usage age-and-name.js 1`] = `
Object {
  "components": Object {},
  "doc": Object {
    "components": Object {},
    "componentsLookup": Object {},
    "date": 2020-10-21T01:23:26.430Z,
    "dateModified": 2020-10-21T01:23:26.430Z,
    "package": "e29c8135e9c608fe008a315d25c201b0",
    "title": "Story",
  },
  "packages": Object {
    "e29c8135e9c608fe008a315d25c201b0": Object {
      "dependencies": Object {
        "@babel/generator": "^7.9.4",
        "@babel/parser": "^7.9.4",
        "@babel/traverse": "^7.9.0",
        "@component-controls/core": "^1.36.6",
        "@hutson/parse-repository-url": "^5.0.0",
        "@mdx-js/loader": "^1.5.5",
        "@mdx-js/react": "^1.6.5",
        "camelcase": "^6.0.0",
        "deepmerge": "^4.2.2",
        "find-cache-dir": "^3.3.1",
        "gray-matter": "^4.0.2",
        "hosted-git-info": "^3.0.4",
        "js-string-escape": "^1.0.1",
        "prettier": "^1.19.1",
        "read-package-json": "^2.1.1",
        "remark-emoji": "^2.1.0",
        "remark-images": "^2.0.0",
        "resolve": "^1.15.1",
        "typescript": "^4.0.5",
      },
      "devDependencies": Object {
        "@babel/types": "^7.9.0",
        "@component-controls/ts-markdown-docs": "^1.21.0",
        "@rollup/plugin-node-resolve": "^7.1.1",
        "@types/find-cache-dir": "^3.2.0",
        "@types/hosted-git-info": "^3.0.0",
        "@types/jest": "^26.0.10",
        "cross-env": "^5.2.1",
        "eslint": "^6.5.1",
        "jest": "^26.4.2",
      },
      "fileHash": "e29c8135e9c608fe008a315d25c201b0",
      "name": "@component-controls/instrument",
      "peerDependencies": undefined,
      "repository": Object {
        "browse": "https://github.com/ccontrols/component-controls/tree/master/core/instrument/test/fixtures/esm/props-usage/age-and-name.js",
        "docs": "https://github.com/ccontrols/component-controls/tree/master#readme",
        "issues": "https://github.com/ccontrols/component-controls/issues",
      },
      "version": "1.36.7",
    },
  },
  "stories": Object {
    "story": Object {
      "arguments": Array [
        Object {
          "loc": Object {
            "end": Object {
              "column": 14,
              "line": 0,
            },
            "start": Object {
              "column": 1,
              "line": 0,
            },
          },
          "name": undefined,
          "value": Array [
            Object {
              "loc": Object {
                "end": Object {
                  "column": 7,
                  "line": 0,
                },
                "start": Object {
                  "column": 3,
                  "line": 0,
                },
              },
              "name": "name",
              "usage": Array [
                Object {
                  "loc": Object {
                    "end": Object {
                      "column": 32,
                      "line": 1,
                    },
                    "start": Object {
                      "column": 28,
                      "line": 1,
                    },
                  },
                  "shorthand": undefined,
                },
              ],
              "value": "name",
            },
            Object {
              "loc": Object {
                "end": Object {
                  "column": 12,
                  "line": 0,
                },
                "start": Object {
                  "column": 9,
                  "line": 0,
                },
              },
              "name": "age",
              "value": "age",
            },
          ],
        },
      ],
      "id": "story",
      "loc": Object {
        "end": Object {
          "column": 1,
          "line": 6,
        },
        "start": Object {
          "column": 21,
          "line": 4,
        },
      },
      "name": "story",
      "source": "({ name, age }) => (
  <h2>{\`Hello, my name is \${name}, and I am \\\\\${age} years old.\`}</h2>
)",
    },
  },
  "transformed": "export default {
  title: 'Story',
};
export const story = ({ name, age }) => (
  <h2>{\`Hello, my name is \${name}, and I am \\\\\${age} years old.\`}</h2>
);
",
}
`;

exports[`esm-props-usage empty-body.js 1`] = `
Object {
  "components": Object {},
  "doc": Object {
    "components": Object {},
    "componentsLookup": Object {},
    "date": 2020-10-21T01:23:26.430Z,
    "dateModified": 2020-10-21T01:23:26.430Z,
    "package": "6b1e224ac16097889a07e950dc91da6a",
    "title": "Story",
  },
  "packages": Object {
    "6b1e224ac16097889a07e950dc91da6a": Object {
      "dependencies": Object {
        "@babel/generator": "^7.9.4",
        "@babel/parser": "^7.9.4",
        "@babel/traverse": "^7.9.0",
        "@component-controls/core": "^1.36.6",
        "@hutson/parse-repository-url": "^5.0.0",
        "@mdx-js/loader": "^1.5.5",
        "@mdx-js/react": "^1.6.5",
        "camelcase": "^6.0.0",
        "deepmerge": "^4.2.2",
        "find-cache-dir": "^3.3.1",
        "gray-matter": "^4.0.2",
        "hosted-git-info": "^3.0.4",
        "js-string-escape": "^1.0.1",
        "prettier": "^1.19.1",
        "read-package-json": "^2.1.1",
        "remark-emoji": "^2.1.0",
        "remark-images": "^2.0.0",
        "resolve": "^1.15.1",
        "typescript": "^4.0.5",
      },
      "devDependencies": Object {
        "@babel/types": "^7.9.0",
        "@component-controls/ts-markdown-docs": "^1.21.0",
        "@rollup/plugin-node-resolve": "^7.1.1",
        "@types/find-cache-dir": "^3.2.0",
        "@types/hosted-git-info": "^3.0.0",
        "@types/jest": "^26.0.10",
        "cross-env": "^5.2.1",
        "eslint": "^6.5.1",
        "jest": "^26.4.2",
      },
      "fileHash": "6b1e224ac16097889a07e950dc91da6a",
      "name": "@component-controls/instrument",
      "peerDependencies": undefined,
      "repository": Object {
        "browse": "https://github.com/ccontrols/component-controls/tree/master/core/instrument/test/fixtures/esm/props-usage/empty-body.js",
        "docs": "https://github.com/ccontrols/component-controls/tree/master#readme",
        "issues": "https://github.com/ccontrols/component-controls/issues",
      },
      "version": "1.36.7",
    },
  },
  "stories": Object {
    "story": Object {
      "arguments": Array [
        Object {
          "loc": Object {
            "end": Object {
              "column": 9,
              "line": 0,
            },
            "start": Object {
              "column": 1,
              "line": 0,
            },
          },
          "name": undefined,
          "value": Array [
            Object {
              "loc": Object {
                "end": Object {
                  "column": 7,
                  "line": 0,
                },
                "start": Object {
                  "column": 3,
                  "line": 0,
                },
              },
              "name": "name",
              "usage": Array [
                Object {
                  "loc": Object {
                    "end": Object {
                      "column": 18,
                      "line": 0,
                    },
                    "start": Object {
                      "column": 14,
                      "line": 0,
                    },
                  },
                  "shorthand": undefined,
                },
              ],
              "value": "name",
            },
          ],
        },
      ],
      "id": "story",
      "loc": Object {
        "end": Object {
          "column": 39,
          "line": 4,
        },
        "start": Object {
          "column": 21,
          "line": 4,
        },
      },
      "name": "story",
      "source": "({ name }) => name",
    },
  },
  "transformed": "export default {
  title: 'Story',
};
export const story = ({ name }) => name;
",
}
`;

exports[`esm-props-usage expression.js 1`] = `
Object {
  "components": Object {},
  "doc": Object {
    "components": Object {},
    "componentsLookup": Object {},
    "date": 2020-10-21T01:23:26.430Z,
    "dateModified": 2020-10-21T01:23:26.430Z,
    "package": "4c19f3b76b8ab9a7c8cd349af53adcd6",
    "title": "Story",
  },
  "packages": Object {
    "4c19f3b76b8ab9a7c8cd349af53adcd6": Object {
      "dependencies": Object {
        "@babel/generator": "^7.9.4",
        "@babel/parser": "^7.9.4",
        "@babel/traverse": "^7.9.0",
        "@component-controls/core": "^1.36.6",
        "@hutson/parse-repository-url": "^5.0.0",
        "@mdx-js/loader": "^1.5.5",
        "@mdx-js/react": "^1.6.5",
        "camelcase": "^6.0.0",
        "deepmerge": "^4.2.2",
        "find-cache-dir": "^3.3.1",
        "gray-matter": "^4.0.2",
        "hosted-git-info": "^3.0.4",
        "js-string-escape": "^1.0.1",
        "prettier": "^1.19.1",
        "read-package-json": "^2.1.1",
        "remark-emoji": "^2.1.0",
        "remark-images": "^2.0.0",
        "resolve": "^1.15.1",
        "typescript": "^4.0.5",
      },
      "devDependencies": Object {
        "@babel/types": "^7.9.0",
        "@component-controls/ts-markdown-docs": "^1.21.0",
        "@rollup/plugin-node-resolve": "^7.1.1",
        "@types/find-cache-dir": "^3.2.0",
        "@types/hosted-git-info": "^3.0.0",
        "@types/jest": "^26.0.10",
        "cross-env": "^5.2.1",
        "eslint": "^6.5.1",
        "jest": "^26.4.2",
      },
      "fileHash": "4c19f3b76b8ab9a7c8cd349af53adcd6",
      "name": "@component-controls/instrument",
      "peerDependencies": undefined,
      "repository": Object {
        "browse": "https://github.com/ccontrols/component-controls/tree/master/core/instrument/test/fixtures/esm/props-usage/expression.js",
        "docs": "https://github.com/ccontrols/component-controls/tree/master#readme",
        "issues": "https://github.com/ccontrols/component-controls/issues",
      },
      "version": "1.36.7",
    },
  },
  "stories": Object {
    "selectProp": Object {
      "arguments": Array [
        Object {
          "loc": Object {
            "end": Object {
              "column": 10,
              "line": 0,
            },
            "start": Object {
              "column": 1,
              "line": 0,
            },
          },
          "name": undefined,
          "value": Array [
            Object {
              "loc": Object {
                "end": Object {
                  "column": 8,
                  "line": 0,
                },
                "start": Object {
                  "column": 3,
                  "line": 0,
                },
              },
              "name": "value",
              "usage": Array [
                Object {
                  "loc": Object {
                    "end": Object {
                      "column": 30,
                      "line": 1,
                    },
                    "start": Object {
                      "column": 25,
                      "line": 1,
                    },
                  },
                  "name": Object {
                    "loc": Object {
                      "end": Object {
                        "column": 30,
                        "line": 1,
                      },
                      "start": Object {
                        "column": 25,
                        "line": 1,
                      },
                    },
                    "name": "value",
                  },
                  "shorthand": true,
                },
              ],
              "value": "value",
            },
          ],
        },
      ],
      "id": "selectProp",
      "loc": Object {
        "end": Object {
          "column": 1,
          "line": 7,
        },
        "start": Object {
          "column": 26,
          "line": 5,
        },
      },
      "name": "selectProp",
      "source": "({ value }) => (
  <div>{JSON.stringify({ value }, null, 2)}</div>
)",
    },
  },
  "transformed": "export default {
  title: 'Story',
};

export const selectProp = ({ value }) => (
  <div>{JSON.stringify({ value }, null, 2)}</div>
);
",
}
`;

exports[`esm-props-usage multiple-usage.js 1`] = `
Object {
  "components": Object {},
  "doc": Object {
    "components": Object {},
    "componentsLookup": Object {},
    "date": 2020-10-21T01:23:26.430Z,
    "dateModified": 2020-10-21T01:23:26.430Z,
    "package": "31a3398d2705e8d1f3606294985d9c04",
    "title": "Story",
  },
  "packages": Object {
    "31a3398d2705e8d1f3606294985d9c04": Object {
      "dependencies": Object {
        "@babel/generator": "^7.9.4",
        "@babel/parser": "^7.9.4",
        "@babel/traverse": "^7.9.0",
        "@component-controls/core": "^1.36.6",
        "@hutson/parse-repository-url": "^5.0.0",
        "@mdx-js/loader": "^1.5.5",
        "@mdx-js/react": "^1.6.5",
        "camelcase": "^6.0.0",
        "deepmerge": "^4.2.2",
        "find-cache-dir": "^3.3.1",
        "gray-matter": "^4.0.2",
        "hosted-git-info": "^3.0.4",
        "js-string-escape": "^1.0.1",
        "prettier": "^1.19.1",
        "read-package-json": "^2.1.1",
        "remark-emoji": "^2.1.0",
        "remark-images": "^2.0.0",
        "resolve": "^1.15.1",
        "typescript": "^4.0.5",
      },
      "devDependencies": Object {
        "@babel/types": "^7.9.0",
        "@component-controls/ts-markdown-docs": "^1.21.0",
        "@rollup/plugin-node-resolve": "^7.1.1",
        "@types/find-cache-dir": "^3.2.0",
        "@types/hosted-git-info": "^3.0.0",
        "@types/jest": "^26.0.10",
        "cross-env": "^5.2.1",
        "eslint": "^6.5.1",
        "jest": "^26.4.2",
      },
      "fileHash": "31a3398d2705e8d1f3606294985d9c04",
      "name": "@component-controls/instrument",
      "peerDependencies": undefined,
      "repository": Object {
        "browse": "https://github.com/ccontrols/component-controls/tree/master/core/instrument/test/fixtures/esm/props-usage/multiple-usage.js",
        "docs": "https://github.com/ccontrols/component-controls/tree/master#readme",
        "issues": "https://github.com/ccontrols/component-controls/issues",
      },
      "version": "1.36.7",
    },
  },
  "stories": Object {
    "myStory": Object {
      "arguments": Array [
        Object {
          "loc": Object {
            "end": Object {
              "column": 8,
              "line": 0,
            },
            "start": Object {
              "column": 1,
              "line": 0,
            },
          },
          "name": undefined,
          "value": Array [
            Object {
              "loc": Object {
                "end": Object {
                  "column": 6,
                  "line": 0,
                },
                "start": Object {
                  "column": 3,
                  "line": 0,
                },
              },
              "name": "age",
              "usage": Array [
                Object {
                  "loc": Object {
                    "end": Object {
                      "column": 31,
                      "line": 2,
                    },
                    "start": Object {
                      "column": 28,
                      "line": 2,
                    },
                  },
                  "shorthand": undefined,
                },
                Object {
                  "loc": Object {
                    "end": Object {
                      "column": 19,
                      "line": 3,
                    },
                    "start": Object {
                      "column": 16,
                      "line": 3,
                    },
                  },
                  "shorthand": undefined,
                },
              ],
              "value": "age",
            },
          ],
        },
      ],
      "id": "myStory",
      "loc": Object {
        "end": Object {
          "column": 1,
          "line": 10,
        },
        "start": Object {
          "column": 23,
          "line": 5,
        },
      },
      "name": "myStory",
      "source": "({ age }) => (
  <>
    <Story name={name} age={age} />
    <Age value={age} />
  </>
)",
    },
  },
  "transformed": "export default {
  title: 'Story',
};

export const myStory = ({ age }) => (
  <>
    <Story name={name} age={age} />
    <Age value={age} />
  </>
);
",
}
`;

exports[`esm-props-usage nested-arguments.js 1`] = `
Object {
  "components": Object {},
  "doc": Object {
    "components": Object {},
    "componentsLookup": Object {},
    "date": 2020-10-21T01:23:26.430Z,
    "dateModified": 2020-10-21T01:23:26.430Z,
    "package": "02163b946b4a3e645402a9dd80ac6ad2",
    "title": "Story",
  },
  "packages": Object {
    "02163b946b4a3e645402a9dd80ac6ad2": Object {
      "dependencies": Object {
        "@babel/generator": "^7.9.4",
        "@babel/parser": "^7.9.4",
        "@babel/traverse": "^7.9.0",
        "@component-controls/core": "^1.36.6",
        "@hutson/parse-repository-url": "^5.0.0",
        "@mdx-js/loader": "^1.5.5",
        "@mdx-js/react": "^1.6.5",
        "camelcase": "^6.0.0",
        "deepmerge": "^4.2.2",
        "find-cache-dir": "^3.3.1",
        "gray-matter": "^4.0.2",
        "hosted-git-info": "^3.0.4",
        "js-string-escape": "^1.0.1",
        "prettier": "^1.19.1",
        "read-package-json": "^2.1.1",
        "remark-emoji": "^2.1.0",
        "remark-images": "^2.0.0",
        "resolve": "^1.15.1",
        "typescript": "^4.0.5",
      },
      "devDependencies": Object {
        "@babel/types": "^7.9.0",
        "@component-controls/ts-markdown-docs": "^1.21.0",
        "@rollup/plugin-node-resolve": "^7.1.1",
        "@types/find-cache-dir": "^3.2.0",
        "@types/hosted-git-info": "^3.0.0",
        "@types/jest": "^26.0.10",
        "cross-env": "^5.2.1",
        "eslint": "^6.5.1",
        "jest": "^26.4.2",
      },
      "fileHash": "02163b946b4a3e645402a9dd80ac6ad2",
      "name": "@component-controls/instrument",
      "peerDependencies": undefined,
      "repository": Object {
        "browse": "https://github.com/ccontrols/component-controls/tree/master/core/instrument/test/fixtures/esm/props-usage/nested-arguments.js",
        "docs": "https://github.com/ccontrols/component-controls/tree/master#readme",
        "issues": "https://github.com/ccontrols/component-controls/issues",
      },
      "version": "1.36.7",
    },
  },
  "stories": Object {
    "story": Object {
      "arguments": Array [
        Object {
          "loc": Object {
            "end": Object {
              "column": 45,
              "line": 0,
            },
            "start": Object {
              "column": 1,
              "line": 0,
            },
          },
          "name": undefined,
          "value": Array [
            Object {
              "loc": Object {
                "end": Object {
                  "column": 9,
                  "line": 0,
                },
                "start": Object {
                  "column": 3,
                  "line": 0,
                },
              },
              "name": "height",
              "usage": Array [
                Object {
                  "loc": Object {
                    "end": Object {
                      "column": 21,
                      "line": 1,
                    },
                    "start": Object {
                      "column": 15,
                      "line": 1,
                    },
                  },
                  "shorthand": undefined,
                },
              ],
              "value": "height",
            },
            Object {
              "loc": Object {
                "end": Object {
                  "column": 17,
                  "line": 0,
                },
                "start": Object {
                  "column": 11,
                  "line": 0,
                },
              },
              "name": "weight",
              "usage": Array [
                Object {
                  "loc": Object {
                    "end": Object {
                      "column": 37,
                      "line": 1,
                    },
                    "start": Object {
                      "column": 31,
                      "line": 1,
                    },
                  },
                  "shorthand": undefined,
                },
              ],
              "value": "weight",
            },
            Object {
              "loc": Object {
                "end": Object {
                  "column": 43,
                  "line": 0,
                },
                "start": Object {
                  "column": 26,
                  "line": 0,
                },
              },
              "name": "style",
              "value": Array [
                Object {
                  "loc": Object {
                    "end": Object {
                      "column": 34,
                      "line": 0,
                    },
                    "start": Object {
                      "column": 28,
                      "line": 0,
                    },
                  },
                  "name": "border",
                  "usage": Array [
                    Object {
                      "loc": Object {
                        "end": Object {
                          "column": 53,
                          "line": 1,
                        },
                        "start": Object {
                          "column": 47,
                          "line": 1,
                        },
                      },
                      "shorthand": undefined,
                    },
                  ],
                  "value": "border",
                },
                Object {
                  "loc": Object {
                    "end": Object {
                      "column": 41,
                      "line": 0,
                    },
                    "start": Object {
                      "column": 36,
                      "line": 0,
                    },
                  },
                  "name": "color",
                  "usage": Array [
                    Object {
                      "loc": Object {
                        "end": Object {
                          "column": 67,
                          "line": 1,
                        },
                        "start": Object {
                          "column": 62,
                          "line": 1,
                        },
                      },
                      "shorthand": undefined,
                    },
                  ],
                  "value": "color",
                },
              ],
            },
          ],
        },
      ],
      "id": "story",
      "loc": Object {
        "end": Object {
          "column": 1,
          "line": 6,
        },
        "start": Object {
          "column": 21,
          "line": 4,
        },
      },
      "name": "story",
      "source": "({ height, weight, style: { border, color } }) => (
  <div height={height} weight={weight} border={border} color={color} />
)",
    },
  },
  "transformed": "export default {
  title: 'Story',
};
export const story = ({ height, weight, style: { border, color } }) => (
  <div height={height} weight={weight} border={border} color={color} />
);
",
}
`;

exports[`esm-props-usage props.js 1`] = `
Object {
  "components": Object {},
  "doc": Object {
    "components": Object {},
    "componentsLookup": Object {},
    "date": 2020-10-21T01:23:26.430Z,
    "dateModified": 2020-10-21T01:23:26.431Z,
    "package": "148100976725fa64e0cd3e6b8f5ab70f",
    "title": "Story",
  },
  "packages": Object {
    "148100976725fa64e0cd3e6b8f5ab70f": Object {
      "dependencies": Object {
        "@babel/generator": "^7.9.4",
        "@babel/parser": "^7.9.4",
        "@babel/traverse": "^7.9.0",
        "@component-controls/core": "^1.36.6",
        "@hutson/parse-repository-url": "^5.0.0",
        "@mdx-js/loader": "^1.5.5",
        "@mdx-js/react": "^1.6.5",
        "camelcase": "^6.0.0",
        "deepmerge": "^4.2.2",
        "find-cache-dir": "^3.3.1",
        "gray-matter": "^4.0.2",
        "hosted-git-info": "^3.0.4",
        "js-string-escape": "^1.0.1",
        "prettier": "^1.19.1",
        "read-package-json": "^2.1.1",
        "remark-emoji": "^2.1.0",
        "remark-images": "^2.0.0",
        "resolve": "^1.15.1",
        "typescript": "^4.0.5",
      },
      "devDependencies": Object {
        "@babel/types": "^7.9.0",
        "@component-controls/ts-markdown-docs": "^1.21.0",
        "@rollup/plugin-node-resolve": "^7.1.1",
        "@types/find-cache-dir": "^3.2.0",
        "@types/hosted-git-info": "^3.0.0",
        "@types/jest": "^26.0.10",
        "cross-env": "^5.2.1",
        "eslint": "^6.5.1",
        "jest": "^26.4.2",
      },
      "fileHash": "148100976725fa64e0cd3e6b8f5ab70f",
      "name": "@component-controls/instrument",
      "peerDependencies": undefined,
      "repository": Object {
        "browse": "https://github.com/ccontrols/component-controls/tree/master/core/instrument/test/fixtures/esm/props-usage/props.js",
        "docs": "https://github.com/ccontrols/component-controls/tree/master#readme",
        "issues": "https://github.com/ccontrols/component-controls/issues",
      },
      "version": "1.36.7",
    },
  },
  "stories": Object {
    "myStory": Object {
      "arguments": Array [
        Object {
          "loc": Object {
            "end": Object {
              "column": 5,
              "line": 0,
            },
            "start": Object {
              "column": 0,
              "line": 0,
            },
          },
          "name": "props",
          "usage": Array [
            Object {
              "loc": Object {
                "end": Object {
                  "column": 25,
                  "line": 0,
                },
                "start": Object {
                  "column": 20,
                  "line": 0,
                },
              },
              "shorthand": undefined,
            },
          ],
          "value": "props",
        },
      ],
      "id": "myStory",
      "loc": Object {
        "end": Object {
          "column": 52,
          "line": 4,
        },
        "start": Object {
          "column": 23,
          "line": 4,
        },
      },
      "name": "myStory",
      "source": "props => <Story {...props} />",
    },
  },
  "transformed": "export default {
  title: 'Story',
};
export const myStory = props => <Story {...props} />;
",
}
`;

exports[`esm-props-usage select-prop.js 1`] = `
Object {
  "components": Object {},
  "doc": Object {
    "components": Object {},
    "componentsLookup": Object {},
    "date": 2020-10-21T01:23:26.431Z,
    "dateModified": 2020-10-21T01:23:26.431Z,
    "package": "5cb9f0e4e9b7610ff459490ccfda3dcc",
    "title": "Story",
  },
  "packages": Object {
    "5cb9f0e4e9b7610ff459490ccfda3dcc": Object {
      "dependencies": Object {
        "@babel/generator": "^7.9.4",
        "@babel/parser": "^7.9.4",
        "@babel/traverse": "^7.9.0",
        "@component-controls/core": "^1.36.6",
        "@hutson/parse-repository-url": "^5.0.0",
        "@mdx-js/loader": "^1.5.5",
        "@mdx-js/react": "^1.6.5",
        "camelcase": "^6.0.0",
        "deepmerge": "^4.2.2",
        "find-cache-dir": "^3.3.1",
        "gray-matter": "^4.0.2",
        "hosted-git-info": "^3.0.4",
        "js-string-escape": "^1.0.1",
        "prettier": "^1.19.1",
        "read-package-json": "^2.1.1",
        "remark-emoji": "^2.1.0",
        "remark-images": "^2.0.0",
        "resolve": "^1.15.1",
        "typescript": "^4.0.5",
      },
      "devDependencies": Object {
        "@babel/types": "^7.9.0",
        "@component-controls/ts-markdown-docs": "^1.21.0",
        "@rollup/plugin-node-resolve": "^7.1.1",
        "@types/find-cache-dir": "^3.2.0",
        "@types/hosted-git-info": "^3.0.0",
        "@types/jest": "^26.0.10",
        "cross-env": "^5.2.1",
        "eslint": "^6.5.1",
        "jest": "^26.4.2",
      },
      "fileHash": "5cb9f0e4e9b7610ff459490ccfda3dcc",
      "name": "@component-controls/instrument",
      "peerDependencies": undefined,
      "repository": Object {
        "browse": "https://github.com/ccontrols/component-controls/tree/master/core/instrument/test/fixtures/esm/props-usage/select-prop.js",
        "docs": "https://github.com/ccontrols/component-controls/tree/master#readme",
        "issues": "https://github.com/ccontrols/component-controls/issues",
      },
      "version": "1.36.7",
    },
  },
  "stories": Object {
    "story": Object {
      "arguments": Array [
        Object {
          "loc": Object {
            "end": Object {
              "column": 17,
              "line": 0,
            },
            "start": Object {
              "column": 1,
              "line": 0,
            },
          },
          "name": undefined,
          "value": Array [
            Object {
              "loc": Object {
                "end": Object {
                  "column": 15,
                  "line": 0,
                },
                "start": Object {
                  "column": 3,
                  "line": 0,
                },
              },
              "name": "showOptional",
              "usage": Array [
                Object {
                  "loc": Object {
                    "end": Object {
                      "column": 19,
                      "line": 4,
                    },
                    "start": Object {
                      "column": 7,
                      "line": 4,
                    },
                  },
                  "shorthand": undefined,
                },
              ],
              "value": "showOptional",
            },
          ],
        },
      ],
      "id": "story",
      "loc": Object {
        "end": Object {
          "column": 1,
          "line": 12,
        },
        "start": Object {
          "column": 21,
          "line": 5,
        },
      },
      "name": "story",
      "source": "({ showOptional }) => {
  return (
    <>
      <div>I must be here</div>
      {showOptional === 'yes' ? <div>Optional, I can disappear</div> : null}
    </>
  );
}",
    },
  },
  "transformed": "import React from 'react';
export default {
  title: 'Story',
};
export const story = ({ showOptional }) => {
  return (
    <>
      <div>I must be here</div>
      {showOptional === 'yes' ? <div>Optional, I can disappear</div> : null}
    </>
  );
};
",
}
`;

exports[`esm-props-usage shorthand.js 1`] = `
Object {
  "components": Object {},
  "doc": Object {
    "components": Object {},
    "componentsLookup": Object {},
    "date": 2020-10-21T01:23:26.431Z,
    "dateModified": 2020-10-21T01:23:26.431Z,
    "package": "9f47664ae1fdd66baf7a9ce52c961032",
    "title": "Story",
  },
  "packages": Object {
    "9f47664ae1fdd66baf7a9ce52c961032": Object {
      "dependencies": Object {
        "@babel/generator": "^7.9.4",
        "@babel/parser": "^7.9.4",
        "@babel/traverse": "^7.9.0",
        "@component-controls/core": "^1.36.6",
        "@hutson/parse-repository-url": "^5.0.0",
        "@mdx-js/loader": "^1.5.5",
        "@mdx-js/react": "^1.6.5",
        "camelcase": "^6.0.0",
        "deepmerge": "^4.2.2",
        "find-cache-dir": "^3.3.1",
        "gray-matter": "^4.0.2",
        "hosted-git-info": "^3.0.4",
        "js-string-escape": "^1.0.1",
        "prettier": "^1.19.1",
        "read-package-json": "^2.1.1",
        "remark-emoji": "^2.1.0",
        "remark-images": "^2.0.0",
        "resolve": "^1.15.1",
        "typescript": "^4.0.5",
      },
      "devDependencies": Object {
        "@babel/types": "^7.9.0",
        "@component-controls/ts-markdown-docs": "^1.21.0",
        "@rollup/plugin-node-resolve": "^7.1.1",
        "@types/find-cache-dir": "^3.2.0",
        "@types/hosted-git-info": "^3.0.0",
        "@types/jest": "^26.0.10",
        "cross-env": "^5.2.1",
        "eslint": "^6.5.1",
        "jest": "^26.4.2",
      },
      "fileHash": "9f47664ae1fdd66baf7a9ce52c961032",
      "name": "@component-controls/instrument",
      "peerDependencies": undefined,
      "repository": Object {
        "browse": "https://github.com/ccontrols/component-controls/tree/master/core/instrument/test/fixtures/esm/props-usage/shorthand.js",
        "docs": "https://github.com/ccontrols/component-controls/tree/master#readme",
        "issues": "https://github.com/ccontrols/component-controls/issues",
      },
      "version": "1.36.7",
    },
  },
  "stories": Object {
    "story": Object {
      "arguments": Array [
        Object {
          "loc": Object {
            "end": Object {
              "column": 10,
              "line": 0,
            },
            "start": Object {
              "column": 1,
              "line": 0,
            },
          },
          "name": undefined,
          "value": Array [
            Object {
              "loc": Object {
                "end": Object {
                  "column": 8,
                  "line": 0,
                },
                "start": Object {
                  "column": 3,
                  "line": 0,
                },
              },
              "name": "value",
              "usage": Array [
                Object {
                  "loc": Object {
                    "end": Object {
                      "column": 30,
                      "line": 1,
                    },
                    "start": Object {
                      "column": 25,
                      "line": 1,
                    },
                  },
                  "name": Object {
                    "loc": Object {
                      "end": Object {
                        "column": 30,
                        "line": 1,
                      },
                      "start": Object {
                        "column": 25,
                        "line": 1,
                      },
                    },
                    "name": "value",
                  },
                  "shorthand": true,
                },
              ],
              "value": "value",
            },
          ],
        },
      ],
      "id": "story",
      "loc": Object {
        "end": Object {
          "column": 1,
          "line": 7,
        },
        "start": Object {
          "column": 21,
          "line": 5,
        },
      },
      "name": "story",
      "source": "({ value }) => (
  <div>{JSON.stringify({ value }, null, 2)}</div>
)",
    },
  },
  "transformed": "export default {
  title: 'Story',
};

export const story = ({ value }) => (
  <div>{JSON.stringify({ value }, null, 2)}</div>
);
",
}
`;

exports[`esm-props-usage string-template.js 1`] = `
Object {
  "components": Object {},
  "doc": Object {
    "components": Object {},
    "componentsLookup": Object {},
    "date": 2020-10-21T01:23:26.431Z,
    "dateModified": 2020-10-21T01:23:26.431Z,
    "package": "e293029d97356050be6d9dce1d8dad98",
    "title": "Story",
  },
  "packages": Object {
    "e293029d97356050be6d9dce1d8dad98": Object {
      "dependencies": Object {
        "@babel/generator": "^7.9.4",
        "@babel/parser": "^7.9.4",
        "@babel/traverse": "^7.9.0",
        "@component-controls/core": "^1.36.6",
        "@hutson/parse-repository-url": "^5.0.0",
        "@mdx-js/loader": "^1.5.5",
        "@mdx-js/react": "^1.6.5",
        "camelcase": "^6.0.0",
        "deepmerge": "^4.2.2",
        "find-cache-dir": "^3.3.1",
        "gray-matter": "^4.0.2",
        "hosted-git-info": "^3.0.4",
        "js-string-escape": "^1.0.1",
        "prettier": "^1.19.1",
        "read-package-json": "^2.1.1",
        "remark-emoji": "^2.1.0",
        "remark-images": "^2.0.0",
        "resolve": "^1.15.1",
        "typescript": "^4.0.5",
      },
      "devDependencies": Object {
        "@babel/types": "^7.9.0",
        "@component-controls/ts-markdown-docs": "^1.21.0",
        "@rollup/plugin-node-resolve": "^7.1.1",
        "@types/find-cache-dir": "^3.2.0",
        "@types/hosted-git-info": "^3.0.0",
        "@types/jest": "^26.0.10",
        "cross-env": "^5.2.1",
        "eslint": "^6.5.1",
        "jest": "^26.4.2",
      },
      "fileHash": "e293029d97356050be6d9dce1d8dad98",
      "name": "@component-controls/instrument",
      "peerDependencies": undefined,
      "repository": Object {
        "browse": "https://github.com/ccontrols/component-controls/tree/master/core/instrument/test/fixtures/esm/props-usage/string-template.js",
        "docs": "https://github.com/ccontrols/component-controls/tree/master#readme",
        "issues": "https://github.com/ccontrols/component-controls/issues",
      },
      "version": "1.36.7",
    },
  },
  "stories": Object {
    "myStory": Object {
      "arguments": Array [
        Object {
          "loc": Object {
            "end": Object {
              "column": 9,
              "line": 0,
            },
            "start": Object {
              "column": 1,
              "line": 0,
            },
          },
          "name": undefined,
          "value": Array [
            Object {
              "loc": Object {
                "end": Object {
                  "column": 7,
                  "line": 0,
                },
                "start": Object {
                  "column": 3,
                  "line": 0,
                },
              },
              "name": "text",
              "usage": Array [
                Object {
                  "loc": Object {
                    "end": Object {
                      "column": 7,
                      "line": 0,
                    },
                    "start": Object {
                      "column": 3,
                      "line": 0,
                    },
                  },
                  "name": Object {
                    "loc": Object {
                      "end": Object {
                        "column": 7,
                        "line": 0,
                      },
                      "start": Object {
                        "column": 3,
                        "line": 0,
                      },
                    },
                    "name": "text",
                  },
                  "shorthand": true,
                },
                Object {
                  "loc": Object {
                    "end": Object {
                      "column": 21,
                      "line": 0,
                    },
                    "start": Object {
                      "column": 17,
                      "line": 0,
                    },
                  },
                  "shorthand": undefined,
                },
              ],
              "value": "text",
            },
          ],
        },
      ],
      "id": "myStory",
      "loc": Object {
        "end": Object {
          "column": 46,
          "line": 4,
        },
        "start": Object {
          "column": 23,
          "line": 4,
        },
      },
      "name": "myStory",
      "source": "({ text }) => \`\${text}\`",
    },
  },
  "transformed": "export default {
  title: 'Story',
};
export const myStory = ({ text }) => \`\${text}\`;
",
}
`;

exports[`esm-props-usage three-levels-alias.js 1`] = `
Object {
  "components": Object {},
  "doc": Object {
    "components": Object {},
    "componentsLookup": Object {},
    "date": 2020-10-21T01:23:26.431Z,
    "dateModified": 2020-10-21T01:23:26.431Z,
    "package": "c02f1c496c215a299355ba50a365e183",
    "title": "Story",
  },
  "packages": Object {
    "c02f1c496c215a299355ba50a365e183": Object {
      "dependencies": Object {
        "@babel/generator": "^7.9.4",
        "@babel/parser": "^7.9.4",
        "@babel/traverse": "^7.9.0",
        "@component-controls/core": "^1.36.6",
        "@hutson/parse-repository-url": "^5.0.0",
        "@mdx-js/loader": "^1.5.5",
        "@mdx-js/react": "^1.6.5",
        "camelcase": "^6.0.0",
        "deepmerge": "^4.2.2",
        "find-cache-dir": "^3.3.1",
        "gray-matter": "^4.0.2",
        "hosted-git-info": "^3.0.4",
        "js-string-escape": "^1.0.1",
        "prettier": "^1.19.1",
        "read-package-json": "^2.1.1",
        "remark-emoji": "^2.1.0",
        "remark-images": "^2.0.0",
        "resolve": "^1.15.1",
        "typescript": "^4.0.5",
      },
      "devDependencies": Object {
        "@babel/types": "^7.9.0",
        "@component-controls/ts-markdown-docs": "^1.21.0",
        "@rollup/plugin-node-resolve": "^7.1.1",
        "@types/find-cache-dir": "^3.2.0",
        "@types/hosted-git-info": "^3.0.0",
        "@types/jest": "^26.0.10",
        "cross-env": "^5.2.1",
        "eslint": "^6.5.1",
        "jest": "^26.4.2",
      },
      "fileHash": "c02f1c496c215a299355ba50a365e183",
      "name": "@component-controls/instrument",
      "peerDependencies": undefined,
      "repository": Object {
        "browse": "https://github.com/ccontrols/component-controls/tree/master/core/instrument/test/fixtures/esm/props-usage/three-levels-alias.js",
        "docs": "https://github.com/ccontrols/component-controls/tree/master#readme",
        "issues": "https://github.com/ccontrols/component-controls/issues",
      },
      "version": "1.36.7",
    },
  },
  "stories": Object {
    "myStory": Object {
      "arguments": Array [
        Object {
          "loc": Object {
            "end": Object {
              "column": 31,
              "line": 0,
            },
            "start": Object {
              "column": 1,
              "line": 0,
            },
          },
          "name": undefined,
          "value": Array [
            Object {
              "loc": Object {
                "end": Object {
                  "column": 24,
                  "line": 0,
                },
                "start": Object {
                  "column": 9,
                  "line": 0,
                },
              },
              "name": "name",
              "value": Array [
                Object {
                  "loc": Object {
                    "end": Object {
                      "column": 16,
                      "line": 0,
                    },
                    "start": Object {
                      "column": 11,
                      "line": 0,
                    },
                  },
                  "name": "first",
                  "usage": Array [
                    Object {
                      "loc": Object {
                        "end": Object {
                          "column": 23,
                          "line": 2,
                        },
                        "start": Object {
                          "column": 18,
                          "line": 2,
                        },
                      },
                      "shorthand": undefined,
                    },
                  ],
                  "value": "first",
                },
                Object {
                  "loc": Object {
                    "end": Object {
                      "column": 22,
                      "line": 0,
                    },
                    "start": Object {
                      "column": 18,
                      "line": 0,
                    },
                  },
                  "name": "last",
                  "usage": Array [
                    Object {
                      "loc": Object {
                        "end": Object {
                          "column": 35,
                          "line": 2,
                        },
                        "start": Object {
                          "column": 31,
                          "line": 2,
                        },
                      },
                      "shorthand": undefined,
                    },
                  ],
                  "value": "last",
                },
              ],
            },
            Object {
              "loc": Object {
                "end": Object {
                  "column": 29,
                  "line": 0,
                },
                "start": Object {
                  "column": 26,
                  "line": 0,
                },
              },
              "name": "age",
              "usage": Array [
                Object {
                  "loc": Object {
                    "end": Object {
                      "column": 19,
                      "line": 3,
                    },
                    "start": Object {
                      "column": 16,
                      "line": 3,
                    },
                  },
                  "shorthand": undefined,
                },
              ],
              "value": "age",
            },
          ],
        },
      ],
      "id": "myStory",
      "loc": Object {
        "end": Object {
          "column": 1,
          "line": 9,
        },
        "start": Object {
          "column": 23,
          "line": 4,
        },
      },
      "name": "myStory",
      "source": "({ name: { first, last }, age }) => (
  <>
    <Story first={first} last={last} />
    <Age value={age} />
  </>
)",
    },
  },
  "transformed": "export default {
  title: 'Story',
};
export const myStory = ({ name: { first, last }, age }) => (
  <>
    <Story first={first} last={last} />
    <Age value={age} />
  </>
);
",
}
`;

exports[`esm-props-usage two-arguments.js 1`] = `
Object {
  "components": Object {},
  "doc": Object {
    "components": Object {},
    "componentsLookup": Object {},
    "date": 2020-10-21T01:23:26.431Z,
    "dateModified": 2020-10-21T01:23:26.431Z,
    "package": "3d35813c0140070f94d9f5783e7191c7",
    "title": "Story",
  },
  "packages": Object {
    "3d35813c0140070f94d9f5783e7191c7": Object {
      "dependencies": Object {
        "@babel/generator": "^7.9.4",
        "@babel/parser": "^7.9.4",
        "@babel/traverse": "^7.9.0",
        "@component-controls/core": "^1.36.6",
        "@hutson/parse-repository-url": "^5.0.0",
        "@mdx-js/loader": "^1.5.5",
        "@mdx-js/react": "^1.6.5",
        "camelcase": "^6.0.0",
        "deepmerge": "^4.2.2",
        "find-cache-dir": "^3.3.1",
        "gray-matter": "^4.0.2",
        "hosted-git-info": "^3.0.4",
        "js-string-escape": "^1.0.1",
        "prettier": "^1.19.1",
        "read-package-json": "^2.1.1",
        "remark-emoji": "^2.1.0",
        "remark-images": "^2.0.0",
        "resolve": "^1.15.1",
        "typescript": "^4.0.5",
      },
      "devDependencies": Object {
        "@babel/types": "^7.9.0",
        "@component-controls/ts-markdown-docs": "^1.21.0",
        "@rollup/plugin-node-resolve": "^7.1.1",
        "@types/find-cache-dir": "^3.2.0",
        "@types/hosted-git-info": "^3.0.0",
        "@types/jest": "^26.0.10",
        "cross-env": "^5.2.1",
        "eslint": "^6.5.1",
        "jest": "^26.4.2",
      },
      "fileHash": "3d35813c0140070f94d9f5783e7191c7",
      "name": "@component-controls/instrument",
      "peerDependencies": undefined,
      "repository": Object {
        "browse": "https://github.com/ccontrols/component-controls/tree/master/core/instrument/test/fixtures/esm/props-usage/two-arguments.js",
        "docs": "https://github.com/ccontrols/component-controls/tree/master#readme",
        "issues": "https://github.com/ccontrols/component-controls/issues",
      },
      "version": "1.36.7",
    },
  },
  "stories": Object {
    "myStory": Object {
      "arguments": Array [
        Object {
          "loc": Object {
            "end": Object {
              "column": 6,
              "line": 0,
            },
            "start": Object {
              "column": 1,
              "line": 0,
            },
          },
          "name": "props",
          "usage": Array [
            Object {
              "loc": Object {
                "end": Object {
                  "column": 36,
                  "line": 0,
                },
                "start": Object {
                  "column": 31,
                  "line": 0,
                },
              },
              "shorthand": undefined,
            },
          ],
          "value": "props",
        },
        Object {
          "loc": Object {
            "end": Object {
              "column": 15,
              "line": 0,
            },
            "start": Object {
              "column": 8,
              "line": 0,
            },
          },
          "name": "context",
          "value": "context",
        },
      ],
      "id": "myStory",
      "loc": Object {
        "end": Object {
          "column": 63,
          "line": 4,
        },
        "start": Object {
          "column": 23,
          "line": 4,
        },
      },
      "name": "myStory",
      "source": "(props, context) => <Story {...props} />",
    },
  },
  "transformed": "export default {
  title: 'Story',
};
export const myStory = (props, context) => <Story {...props} />;
",
}
`;

exports[`esm-props-usage two-levels-alias.js 1`] = `
Object {
  "components": Object {},
  "doc": Object {
    "components": Object {},
    "componentsLookup": Object {},
    "date": 2020-10-21T01:23:26.431Z,
    "dateModified": 2020-10-21T01:23:26.431Z,
    "package": "71aec6b23825670f65c73ae6a7aa081d",
    "title": "Story",
  },
  "packages": Object {
    "71aec6b23825670f65c73ae6a7aa081d": Object {
      "dependencies": Object {
        "@babel/generator": "^7.9.4",
        "@babel/parser": "^7.9.4",
        "@babel/traverse": "^7.9.0",
        "@component-controls/core": "^1.36.6",
        "@hutson/parse-repository-url": "^5.0.0",
        "@mdx-js/loader": "^1.5.5",
        "@mdx-js/react": "^1.6.5",
        "camelcase": "^6.0.0",
        "deepmerge": "^4.2.2",
        "find-cache-dir": "^3.3.1",
        "gray-matter": "^4.0.2",
        "hosted-git-info": "^3.0.4",
        "js-string-escape": "^1.0.1",
        "prettier": "^1.19.1",
        "read-package-json": "^2.1.1",
        "remark-emoji": "^2.1.0",
        "remark-images": "^2.0.0",
        "resolve": "^1.15.1",
        "typescript": "^4.0.5",
      },
      "devDependencies": Object {
        "@babel/types": "^7.9.0",
        "@component-controls/ts-markdown-docs": "^1.21.0",
        "@rollup/plugin-node-resolve": "^7.1.1",
        "@types/find-cache-dir": "^3.2.0",
        "@types/hosted-git-info": "^3.0.0",
        "@types/jest": "^26.0.10",
        "cross-env": "^5.2.1",
        "eslint": "^6.5.1",
        "jest": "^26.4.2",
      },
      "fileHash": "71aec6b23825670f65c73ae6a7aa081d",
      "name": "@component-controls/instrument",
      "peerDependencies": undefined,
      "repository": Object {
        "browse": "https://github.com/ccontrols/component-controls/tree/master/core/instrument/test/fixtures/esm/props-usage/two-levels-alias.js",
        "docs": "https://github.com/ccontrols/component-controls/tree/master#readme",
        "issues": "https://github.com/ccontrols/component-controls/issues",
      },
      "version": "1.36.7",
    },
  },
  "stories": Object {
    "myStory": Object {
      "arguments": Array [
        Object {
          "loc": Object {
            "end": Object {
              "column": 22,
              "line": 0,
            },
            "start": Object {
              "column": 1,
              "line": 0,
            },
          },
          "name": undefined,
          "value": Array [
            Object {
              "loc": Object {
                "end": Object {
                  "column": 15,
                  "line": 0,
                },
                "start": Object {
                  "column": 9,
                  "line": 0,
                },
              },
              "name": "name",
              "usage": Array [
                Object {
                  "loc": Object {
                    "end": Object {
                      "column": 21,
                      "line": 1,
                    },
                    "start": Object {
                      "column": 15,
                      "line": 1,
                    },
                  },
                  "shorthand": undefined,
                },
              ],
              "value": "MyName",
            },
            Object {
              "loc": Object {
                "end": Object {
                  "column": 20,
                  "line": 0,
                },
                "start": Object {
                  "column": 17,
                  "line": 0,
                },
              },
              "name": "age",
              "usage": Array [
                Object {
                  "loc": Object {
                    "end": Object {
                      "column": 31,
                      "line": 1,
                    },
                    "start": Object {
                      "column": 28,
                      "line": 1,
                    },
                  },
                  "shorthand": undefined,
                },
              ],
              "value": "age",
            },
          ],
        },
      ],
      "id": "myStory",
      "loc": Object {
        "end": Object {
          "column": 1,
          "line": 6,
        },
        "start": Object {
          "column": 23,
          "line": 4,
        },
      },
      "name": "myStory",
      "source": "({ name: MyName, age }) => (
  <Story name={MyName} age={age} />
)",
    },
  },
  "transformed": "export default {
  title: 'Story',
};
export const myStory = ({ name: MyName, age }) => (
  <Story name={MyName} age={age} />
);
",
}
`;

exports[`esm-props-usage two-levels-sub-arguments.js 1`] = `
Object {
  "components": Object {},
  "doc": Object {
    "components": Object {},
    "componentsLookup": Object {},
    "date": 2020-10-21T01:23:26.431Z,
    "dateModified": 2020-10-21T01:23:26.431Z,
    "package": "3446779011041fa8b753053121a4b4b0",
    "title": "Story",
  },
  "packages": Object {
    "3446779011041fa8b753053121a4b4b0": Object {
      "dependencies": Object {
        "@babel/generator": "^7.9.4",
        "@babel/parser": "^7.9.4",
        "@babel/traverse": "^7.9.0",
        "@component-controls/core": "^1.36.6",
        "@hutson/parse-repository-url": "^5.0.0",
        "@mdx-js/loader": "^1.5.5",
        "@mdx-js/react": "^1.6.5",
        "camelcase": "^6.0.0",
        "deepmerge": "^4.2.2",
        "find-cache-dir": "^3.3.1",
        "gray-matter": "^4.0.2",
        "hosted-git-info": "^3.0.4",
        "js-string-escape": "^1.0.1",
        "prettier": "^1.19.1",
        "read-package-json": "^2.1.1",
        "remark-emoji": "^2.1.0",
        "remark-images": "^2.0.0",
        "resolve": "^1.15.1",
        "typescript": "^4.0.5",
      },
      "devDependencies": Object {
        "@babel/types": "^7.9.0",
        "@component-controls/ts-markdown-docs": "^1.21.0",
        "@rollup/plugin-node-resolve": "^7.1.1",
        "@types/find-cache-dir": "^3.2.0",
        "@types/hosted-git-info": "^3.0.0",
        "@types/jest": "^26.0.10",
        "cross-env": "^5.2.1",
        "eslint": "^6.5.1",
        "jest": "^26.4.2",
      },
      "fileHash": "3446779011041fa8b753053121a4b4b0",
      "name": "@component-controls/instrument",
      "peerDependencies": undefined,
      "repository": Object {
        "browse": "https://github.com/ccontrols/component-controls/tree/master/core/instrument/test/fixtures/esm/props-usage/two-levels-sub-arguments.js",
        "docs": "https://github.com/ccontrols/component-controls/tree/master#readme",
        "issues": "https://github.com/ccontrols/component-controls/issues",
      },
      "version": "1.36.7",
    },
  },
  "stories": Object {
    "myStory": Object {
      "arguments": Array [
        Object {
          "loc": Object {
            "end": Object {
              "column": 14,
              "line": 0,
            },
            "start": Object {
              "column": 1,
              "line": 0,
            },
          },
          "name": undefined,
          "value": Array [
            Object {
              "loc": Object {
                "end": Object {
                  "column": 7,
                  "line": 0,
                },
                "start": Object {
                  "column": 3,
                  "line": 0,
                },
              },
              "name": "name",
              "usage": Array [
                Object {
                  "loc": Object {
                    "end": Object {
                      "column": 36,
                      "line": 0,
                    },
                    "start": Object {
                      "column": 32,
                      "line": 0,
                    },
                  },
                  "shorthand": undefined,
                },
              ],
              "value": "name",
            },
            Object {
              "loc": Object {
                "end": Object {
                  "column": 12,
                  "line": 0,
                },
                "start": Object {
                  "column": 9,
                  "line": 0,
                },
              },
              "name": "age",
              "usage": Array [
                Object {
                  "loc": Object {
                    "end": Object {
                      "column": 46,
                      "line": 0,
                    },
                    "start": Object {
                      "column": 43,
                      "line": 0,
                    },
                  },
                  "shorthand": undefined,
                },
              ],
              "value": "age",
            },
          ],
        },
      ],
      "id": "myStory",
      "loc": Object {
        "end": Object {
          "column": 73,
          "line": 4,
        },
        "start": Object {
          "column": 23,
          "line": 4,
        },
      },
      "name": "myStory",
      "source": "({ name, age }) => <Story name={name} age={age} />",
    },
  },
  "transformed": "export default {
  title: 'Story',
};
export const myStory = ({ name, age }) => <Story name={name} age={age} />;
",
}
`;
